[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_mqtt_bridge"
version = "0.1.0"
description = "MQTT ↔ robot_agent bridge — receive structured plans over MQTT, execute via robot_agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KETI" }]
keywords = ["mqtt", "robot", "robot_agent", "bridge"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "paho-mqtt>=1.6",
    "websockets>=12",
    "numpy",
]

[project.scripts]
robot-mqtt-server = "robot_mqtt_bridge.server:main"
robot-mqtt-client = "robot_mqtt_bridge.client:main"

[project.urls]
Homepage = "https://github.com/keti/robot_mqtt_bridge"

[tool.setuptools.packages.find]
include = ["robot_mqtt_bridge*"]
